<resources>
    <string name="app_name">Jogo da Memória</string>
    <string name="dificuldade">Dificuldade</string>
    <string name="iniciar">INICIAR</string>
    <string name="desc_num_pares">Número de pares que define a dificuldade do jogo.</string>
    <string name="num_pares">Número de Pares</string>
    <string name="set_dif_message">Configuração alterada</string>
    <string name="btn_ok">OK</string>
    <string name="fim_jogo">Parabéns, você completou o jogo!</string>
    <string name="desc_som_jogo">Configuração do Som</string>
    <string name="som_jogo">Som</string>
    <string name="menu_jogo">Jogo</string>
    <string name="menu_musica">Música</string>
    <string name="menu_configurar">Configurar</string>
    <string name="menu_reiniciar">Reiniciar</string>
    <string name="menu_parar_musica">Parar música</string>
    <string name="menu_tocar_musica">Tocar música</string>
    <string name="mensagem_menu">Aguarde o início do novo jogo!</string>
    <!-- descrição das imagens -->
    <string name="wildcard">interrogação</string>
    <string name="beachchair">cadeira de praia</string>
    <string name="bear">urso polar</string>
    <string name="bee">abelha</string>
    <string name="bike">coroa de bicicleta</string>
    <string name="blackguitar">violão preto</string>
    <string name="books">pilha de livros</string>
    <string name="boy">garoto de boné</string>
    <string name="bus">ônibus amarelo</string>
    <string name="butterfly">borboleta</string>
    <string name="cake">bolo com cereja</string>
    <string name="cat">gato da sorte</string>
    <string name="coelho">coelho</string>
    <string name="dice">dados vermelhos</string>
    <string name="dog">vira lata caramelo</string>
    <string name="dolphin">golfinho</string>
    <string name="edit">lápis</string>
    <string name="elephant">elefante</string>
    <string name="ferrari">carro vermelho</string>
    <string name="fish">peixe dourado</string>
    <string name="games">dados brancos</string>
    <string name="gato">gato de gravata</string>
    <string name="home">casa com chaminé</string>
    <string name="hyundai">carro preto</string>
    <string name="linux">pinguim</string>
    <string name="machine">relógio de bolso</string>
    <string name="maleta">maleta</string>
    <string name="messenger">girassol</string>
    <string name="mobile">celular</string>
    <string name="moto">lambreta vermelha</string>
    <string name="office">máquina de escrever</string>
    <string name="panda">urso panda</string>
    <string name="password">chaveiro</string>
    <string name="pen">caneta</string>
    <string name="peteca">peteca colorida</string>
    <string name="piao">pião de brinquedo</string>
    <string name="pipacolada">água de côco</string>
    <string name="poolbird">pássaro</string>
    <string name="radish">rabanete</string>
    <string name="santa">papai noel</string>
    <string name="shoes">par de tênis</string>
    <string name="snow">boneco de neve</string>
    <string name="thumbsup">polegar OK</string>
    <string name="tools">ferramentas</string>
    <string name="toy">caixa de brinquedos</string>
    <string name="world">planeta Terra</string>
    <string name="xadrez">peças de xadrez</string>
</resources>
